fixed image alignment

--- a/lesson2/css/style-design-principles.css
+++ b/lesson2/css/style-design-principles.css
@@ -23,8 +23,8 @@ main {
 }
 
 img {
-  width: 300px;
-  margin-top: 10px;
+  width: 100%;
+  margin: 10px;
 }
 
 .page-grid {
@@ -67,6 +67,7 @@ img {
   }
   img {
     display: block;
+    max-width: 100%;
   }
 }
 
